--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
           position="0 0 0"
           scale="0.005 0.005 0.005"
                   roation="0 180 0"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://Jazmyneblue.github.io/creaturept2/scene.gltf"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://Jazmyneblue.github.io/creaturept2/create_your_superhero_suit/scene.gltf"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
